Ajuste ao iniciar o jogo listar as perguntas.
